<resources>
    <string name="app_name">android_party_matching</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign up</string>

    <string name="SignUpConfirm">입력하신 정보로 회원가입하시겠습니까?</string>

    <string name="user_name">Name</string>
    <string name="kakaotalk_id">KakaoTalk ID</string>

    <string name="loading">서버에 접속 중입니다.</string>

    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="meeting_time">모임시간</string>
    <string name="meeting_place">모임장소</string>
    <string name="registrant">작성자</string>
    <string name="group_join">참가신청</string>

    <string name="sp_year">연도</string>
    <string name="sp_month">월</string>
    <string name="sp_day">일</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
