<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BoardContentActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/title"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:text="TextView"
            android:textSize="11pt" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="@string/content"
            android:textSize="8pt" />

        <!--
        게시글에서 작성자가 쓴 글을 보여주는 TextVieww
        -->
        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="TextView"
            android:textSize="10pt" />

        <!--
         모임시간
         -->
        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:text="@string/meeting_time"
            android:textSize="7pt" />

        <!--
         모임장소
         -->
        <TextView
            android:id="@+id/txtPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:text="@string/meeting_place"
            android:textSize="7pt" />

        <!--
         작성자
         -->
        <TextView
            android:id="@+id/txtRegistrant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:text="@string/registrant"
            android:textSize="7pt" />

    </LinearLayout>

    <!--
    그룹에 가입되어 있는 사람들한테 보이는 버튼으로 그룹 사람들의 현재 위치를 가져와서 보여주는 액티비티로 이동한다.
    -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnGroupMemberLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/ic_menu_send" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/group_join" />

</android.support.design.widget.CoordinatorLayout>